--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
   </div>
 
   <!-- Galeria de Foguetes -->
-  <div class="section">
-    <h2>Foguetes Intergalácticos</h2>
-    <div style="overflow-x: auto; white-space: nowrap;">
-      <img src="URL_DO_FOGUETE1" class="banner" style="display:inline-block; width:200px;">
-      <img src="URL_DO_FOGUETE2" class="banner" style="display:inline-block; width:200px;">
-      <img src="URL_DO_FOGUETE3" class="banner" style="display:inline-block; width:200px;">
-    </div>
-  </div>
-
+  
+<div style="overflow-x: auto; white-space: nowrap;">
+  <img src="https://i.ibb.co/qgnhY2T/foguete-brasil-lula-bolsonaro.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+  <img src="https://i.ibb.co/x2wZ0Xs/foguete-china.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+  <img src="https://i.ibb.co/ZhR9knn/foguete-japao.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+  <img src="https://i.ibb.co/sqD0Wj8/foguete-russia.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+  <img src="https://i.ibb.co/YtTDkL1/foguete-europa.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+  <img src="https://i.ibb.co/dM2h9Y9/foguete-brasil-v2.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+</div>
   <!-- Tokenomics -->
   <div class="section">
     <h2>Tokenomics</h2>
