--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   }
 </script>
 
-<!-- Seção cômica -->
+<!-- Texto cômico -->
 <div class="section">
   <h2>A Corrida Espacial Memeal</h2>
   <p>Em um futuro muito próximo (ou já atrasado), as maiores potências mundiais resolveram largar as tretas na Terra e disputar quem chega primeiro a Marte... <strong>de foguete memeiro</strong>.</p>
@@ -150,6 +150,19 @@
     <li>• E a Europa, que ainda está votando pra decidir quem leva o combustível.</li>
   </ul>
   <p>No meio disso tudo, nasce o WHOMARS — a cripto zoada que não promete te deixar rico, <strong>mas promete te levar na zoeira até o espaço</strong>.</p>
+</div>
+
+<!-- Foguetes Intergalácticos -->
+<div class="section">
+  <h2>Foguetes Intergalácticos</h2>
+  <div style="overflow-x: auto; white-space: nowrap;">
+    <img src="https://i.ibb.co/Vp9T5BVK/file-00000000afac6230ab9418d79de557cd-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/RpmYFWNR/file-00000000f90061f6841916e2ec2c8796-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/sxQLvvh/file-00000000864862308575b429ec9fc37f-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/603F3g4w/file-000000002cd861f8b51addb8574a3fc7-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/7N8ZVQRd/file-00000000bfe461f8bf1406265480e8e6-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/3yzvhWkX/file-00000000d4a861f89fc2abab45989264-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+  </div>
 </div>
 
 <!-- Tokenomics -->
