--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
   </a>
   <button onclick="ativarModoGalactico()" class="buy-button">
     ATIVAR MODO GALÁCTICO
+  <a href="https://chat.whatsapp.com/SEU-LINK-DO-GRUPO" target="_blank">
+  <button class="buy-button">ENTRAR NO GRUPO WHOMARS</button>
+</a>
   </button>
   <p id="textoGalactico" style="margin-top:15px; color:#00e6b8; font-style: italic;"></p>
 </div>
