--- a/index.html
+++ b/index.html
@@ -69,13 +69,6 @@
       margin: 0 10px;
       text-decoration: none;
     }
-    .why-invest ul, .roadmap ul {
-      list-style: none;
-      padding: 0;
-    }
-    .why-invest li, .roadmap li {
-      margin: 8px 0;
-    }
     .alerta-topo {
       background: #00e6b8;
       color: #000;
@@ -95,25 +88,22 @@
   WHOMARS PRÉ-VENDA ATIVA! NÃO PERCA A VIAGEM PARA MARTE!
 </div>
 
-<!-- Banners -->
 <img class="banner" src="https://i.ibb.co/XkL8FnTT/file-000000008e3c62308a2df87cd87017ac-conversation-id-67fdc268-aafc-8009-af43-3c233ea751e6-message-i.png" alt="Banner WHOMARS 1">
 <img class="banner" src="https://i.ibb.co/nqcLn2Lm/file-00000000653c61f699992c277d083e7b-conversation-id-67fe96c4-ce40-8009-9623-2f8c1059ee2d-message-i.png" alt="Banner WHOMARS 2">
 
-<!-- Botões -->
 <div class="section">
   <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank">
     <button class="buy-button">COMPRAR WHM AGORA</button>
   </a>
   <button onclick="ativarModoGalactico()" class="buy-button">
     ATIVAR MODO GALÁCTICO
-  <a href="https://chat.whatsapp.com/SEU-LINK-DO-GRUPO" target="_blank">
-  <button class="buy-button">ENTRAR NO GRUPO WHOMARS</button>
-</a>
   </button>
+  <a href="https://chat.whatsapp.com/Ef9mGFpadONHmdnZNvOvJj" target="_blank">
+    <button class="buy-button">ENTRAR NO GRUPO WHOMARS</button>
+  </a>
   <p id="textoGalactico" style="margin-top:15px; color:#00e6b8; font-style: italic;"></p>
 </div>
 
-<!-- Contador -->
 <div class="section">
   <p id="contador" style="font-size: 18px; color: #00e6b8;"></p>
 </div>
@@ -141,7 +131,6 @@
   }
 </script>
 
-<!-- Texto cômico -->
 <div class="section">
   <h2>A Corrida Espacial Memeal</h2>
   <p>Em um futuro muito próximo (ou já atrasado), as maiores potências mundiais resolveram largar as tretas na Terra e disputar quem chega primeiro a Marte... <strong>de foguete memeiro</strong>.</p>
@@ -155,20 +144,18 @@
   <p>No meio disso tudo, nasce o WHOMARS — a cripto zoada que não promete te deixar rico, <strong>mas promete te levar na zoeira até o espaço</strong>.</p>
 </div>
 
-<!-- Foguetes Intergalácticos -->
 <div class="section">
   <h2>Foguetes Intergalácticos</h2>
   <div style="overflow-x: auto; white-space: nowrap;">
-    <img src="https://i.ibb.co/Vp9T5BVK/file-00000000afac6230ab9418d79de557cd-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/RpmYFWNR/file-00000000f90061f6841916e2ec2c8796-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/sxQLvvh/file-00000000864862308575b429ec9fc37f-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/603F3g4w/file-000000002cd861f8b51addb8574a3fc7-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/7N8ZVQRd/file-00000000bfe461f8bf1406265480e8e6-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/3yzvhWkX/file-00000000d4a861f89fc2abab45989264-conversation-id-67fefe79-670c-8009-a7fa-31d982e1ee2e-message-i.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/Vp9T5BVK/file-00000000afac6230ab9418d79de557cd-conversation-id-67fefe79.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/RpmYFWNR/file-00000000f90061f6841916e2ec2c8796-conversation-id.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/sxQLvvh/file-00000000864862308575b429ec9fc37f.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/603F3g4w/file-000000002cd861f8b51addb8574a3fc7.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/7N8ZVQRd/file-00000000bfe461f8bf1406265480e8e6.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
+    <img src="https://i.ibb.co/3yzvhWkX/file-00000000d4a861f89fc2abab45989264.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
   </div>
 </div>
 
-<!-- Tokenomics -->
 <div class="section">
   <h2>Tokenomics</h2>
   <p><strong>Nome:</strong> WHOMARS (WHM)</p>
@@ -177,7 +164,6 @@
   <p><strong>Rede:</strong> BNB Smart Chain</p>
 </div>
 
-<!-- Roadmap -->
 <div class="section roadmap">
   <h2>Roadmap Interplanetário</h2>
   <ul>
@@ -189,7 +175,6 @@
   </ul>
 </div>
 
-<!-- Rodapé -->
 <div class="footer">
   <div class="social-links">
     <a href="https://facebook.com/whomars" target="_blank">Facebook</a> |
