--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
   <a href="https://chat.whatsapp.com/Ef9mGFpadONHmdnZNvOvJj" target="_blank">
     <button class="buy-button">ENTRAR NO GRUPO WHOMARS</button>
   </a>
-  <p id="textoGalactico" style="margin-top:15px; color:#00e6b8; font-style: italic;"></p>
+  
+ <p <a href="galeria.html">
+    <button class="buy-button">VER GALERIA SECRETA</button>
+  </a>" style="margin-top:15px; color:#00e6b8; font-style: italic;"></p>
 </div>
 
 <div class="section">
