--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
   WHOMARS PRÉ-VENDA ATIVA! NÃO PERCA A VIAGEM PARA MARTE!
 </div>
 
-<img class="banner" src="https://i.ibb.co/XkL8FnTT/file-000000008e3c62308a2df87cd87017ac-conversation-id-67fdc268-aafc-8009-af43-3c233ea751e6-message-i.png" alt="Banner WHOMARS 1">
-<img class="banner" src="https://i.ibb.co/nqcLn2Lm/file-00000000653c61f699992c277d083e7b-conversation-id-67fe96c4-ce40-8009-9623-2f8c1059ee2d-message-i.png" alt="Banner WHOMARS 2">
+<img class="banner" src="https://i.ibb.co/XkL8FnTT/file-000000008e3c62308a2df87cd87017ac-conversation-id-67fdc268.png" alt="Banner WHOMARS 1">
+<img class="banner" src="https://i.ibb.co/nqcLn2Lm/file-00000000653c61f699992c277d083e7b-conversation-id.png" alt="Banner WHOMARS 2">
 
 <div class="section">
   <a href="https://pancakeswap.finance/swap?outputCurrency=0x0951BD6B6310175EdC9508F3A5A24Ee5" target="_blank">
@@ -101,10 +101,10 @@
   <a href="https://chat.whatsapp.com/Ef9mGFpadONHmdnZNvOvJj" target="_blank">
     <button class="buy-button">ENTRAR NO GRUPO WHOMARS</button>
   </a>
-  
- <p <a href="galeria.html">
+  <a href="galeria.html">
     <button class="buy-button">VER GALERIA SECRETA</button>
-  </a>" style="margin-top:15px; color:#00e6b8; font-style: italic;"></p>
+  </a>
+  <p id="textoGalactico" style="margin-top:15px; color:#00e6b8; font-style: italic;"></p>
 </div>
 
 <div class="section">
@@ -148,34 +148,11 @@
 </div>
 
 <div class="section">
-  <h2>Foguetes Intergalácticos</h2>
-  <div style="overflow-x: auto; white-space: nowrap;">
-    <img src="https://i.ibb.co/Vp9T5BVK/file-00000000afac6230ab9418d79de557cd-conversation-id-67fefe79.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/RpmYFWNR/file-00000000f90061f6841916e2ec2c8796-conversation-id.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/sxQLvvh/file-00000000864862308575b429ec9fc37f.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/603F3g4w/file-000000002cd861f8b51addb8574a3fc7.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/7N8ZVQRd/file-00000000bfe461f8bf1406265480e8e6.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-    <img src="https://i.ibb.co/3yzvhWkX/file-00000000d4a861f89fc2abab45989264.png" class="banner" style="display:inline-block; width:200px; margin-right: 10px;">
-  </div>
-</div>
-
-<div class="section">
   <h2>Tokenomics</h2>
   <p><strong>Nome:</strong> WHOMARS (WHM)</p>
   <p><strong>Contrato:</strong> 0x0951BD6B6310175EdC9508F3A5A24Ee5</p>
   <p><strong>Fornecimento total:</strong> 100.000.000.000 WHM</p>
   <p><strong>Rede:</strong> BNB Smart Chain</p>
-</div>
-
-<div class="section roadmap">
-  <h2>Roadmap Interplanetário</h2>
-  <ul>
-    <li>✔ Pré-venda inicial</li>
-    <li>✔ Listagem PancakeSwap</li>
-    <li>🚀 Lançamento da coleção NFT WHOMARS</li>
-    <li>🛸 Expansão para exchanges e staking</li>
-    <li>🌕 MemeSpace Game (fase zoeira final)</li>
-  </ul>
 </div>
 
 <div class="footer">
