--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Foguetes WHOMARS - Galeria Secreta</title>
+  <title>Galeria Secreta WHOMARS</title>
   <style>
     body {
       background: #111;
@@ -13,7 +13,9 @@
       padding: 30px;
       user-select: none;
     }
-    h1 { color: #00e6b8; }
+    h1 {
+      color: #00e6b8;
+    }
     .container {
       display: none;
       flex-wrap: wrap;
@@ -25,12 +27,14 @@
       border-radius: 10px;
       box-shadow: 0 0 10px #00e6b8;
       width: 200px;
-      transition: 0.3s ease;
       pointer-events: none;
       user-select: none;
       -webkit-user-drag: none;
+      transition: transform 0.3s ease;
     }
-    .container img:hover { transform: scale(1.05); }
+    .container img:hover {
+      transform: scale(1.05);
+    }
     .senha {
       margin-top: 40px;
     }
@@ -66,20 +70,26 @@
   </div>
 
   <div class="container" id="galeria">
-    <!-- IMAGENS PROTEGIDAS (sem link) -->
-    <img src="https://i.ibb.co/fdjHw1qH/file-00000000e5b46230ba7555231f4efeb6-conversation-id-67fefe79.png" alt="Foguete 1">
-    <img src="https://i.ibb.co/xqyMSPyF/file-0000000012f061f7beaca2d2ec16cd79-conversation-id.png" alt="Foguete 2">
-    <img src="https://i.ibb.co/3Y0vShy1/file-000000006f3461f791ef2dc9f397c853-conversation-id-1.png" alt="Foguete 3">
-    <img src="https://i.ibb.co/vvRxvy4P/file-000000006f3461f791ef2dc9f397c853-conversation-id.png" alt="Foguete 4">
-    <img src="https://i.ibb.co/RkB1SgBr/file-00000000b4a861f6a93c4695bd3f093f-conversation-id.png" alt="Foguete 5">
-    <img src="https://i.ibb.co/xSmcPC2n/file-0000000048f461f784b1e7f32e909cb0-conversation-id.png" alt="Foguete 6">
-    <img src="https://i.ibb.co/Xxf4N9TC/file-00000000add461f881959e1494651fff-conversation-id.png" alt="Foguete 7">
-    <img src="https://i.ibb.co/LDKZv3cm/file-0000000013cc61f7af1327b53ed91f66-conversation-id.png" alt="Foguete 8">
-    <img src="https://i.ibb.co/K1NNJyX/file-000000004bd461f7a1e598f5fedad5f5-conversation-id.png" alt="Foguete 9">
-    <img src="https://i.ibb.co/BVqQ73jL/file-0000000044a061f7bd4f24346e2d34ce-conversation-id.png" alt="Foguete 10">
-    <img src="https://i.ibb.co/QjtxhN13/file-00000000dc8861f7910bf82bfd2c8055-conversation-id.png" alt="Foguete 11">
-    <img src="https://i.ibb.co/SXm98F9H/file-000000003bbc61f7b54e5fa64fd10438-conversation-id.png" alt="Foguete 12">
-    <img src="https://i.ibb.co/4n1xCvGc/file-00000000578c61f7b44174588b041b33-conversation-id.png" alt="Foguete 13">
+    <!-- Imagens protegidas -->
+    <img src="https://i.ibb.co/fdjHw1qH/file-00000000e5b46230ba7555231f4efeb6-conversation-id-67fefe79.png" alt="Foguete">
+    <img src="https://i.ibb.co/xqyMSPyF/file-0000000012f061f7beaca2d2ec16cd79-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/3Y0vShy1/file-000000006f3461f791ef2dc9f397c853-conversation-id-1.png" alt="Foguete">
+    <img src="https://i.ibb.co/vvRxvy4P/file-000000006f3461f791ef2dc9f397c853-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/RkB1SgBr/file-00000000b4a861f6a93c4695bd3f093f-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/xSmcPC2n/file-0000000048f461f784b1e7f32e909cb0-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/Xxf4N9TC/file-00000000add461f881959e1494651fff-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/LDKZv3cm/file-0000000013cc61f7af1327b53ed91f66-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/K1NNJyX/file-000000004bd461f7a1e598f5fedad5f5-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/BVqQ73jL/file-0000000044a061f7bd4f24346e2d34ce-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/QjtxhN13/file-00000000dc8861f7910bf82bfd2c8055-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/SXm98F9H/file-000000003bbc61f7b54e5fa64fd10438-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/4n1xCvGc/file-00000000578c61f7b44174588b041b33-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/603F3g4w/file-000000002cd861f8b51addb8574a3fc7.png" alt="Foguete">
+    <img src="https://i.ibb.co/7N8ZVQRd/file-00000000bfe461f8bf1406265480e8e6.png" alt="Foguete">
+    <img src="https://i.ibb.co/3yzvhWkX/file-00000000d4a861f89fc2abab45989264.png" alt="Foguete">
+    <img src="https://i.ibb.co/Vp9T5BVK/file-00000000afac6230ab9418d79de557cd-conversation-id-67fefe79.png" alt="Foguete">
+    <img src="https://i.ibb.co/RpmYFWNR/file-00000000f90061f6841916e2ec2c8796-conversation-id.png" alt="Foguete">
+    <img src="https://i.ibb.co/sxQLvvh/file-00000000864862308575b429ec9fc37f.png" alt="Foguete">
 
     <div class="voltar">
       <a href="index.html"><button class="btn">Voltar para o Site Principal</button></a>
