--- a/galeria.html
+++ b/galeria.html
@@ -1,9 +1,9 @@
  <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galeria Secreta WHOMARS</title>
+  <meta charset="utf-8"/>
+  <title>Galeria WHOMARS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     body {
       background: #111;
@@ -11,101 +11,61 @@
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 30px;
-      user-select: none;
     }
     h1 {
       color: #00e6b8;
     }
     .container {
-      display: none;
+      display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-top: 30px;
     }
     .container img {
       border-radius: 10px;
       box-shadow: 0 0 10px #00e6b8;
       width: 200px;
+      transition: 0.3s ease;
       pointer-events: none;
-      user-select: none;
       -webkit-user-drag: none;
-      transition: transform 0.3s ease;
+      user-select: none;
     }
     .container img:hover {
       transform: scale(1.05);
     }
-    .senha {
-      margin-top: 40px;
-    }
-    input[type="password"] {
-      padding: 12px;
-      font-size: 18px;
-      border-radius: 8px;
-      border: none;
-    }
-    .btn {
-      background: #00e6b8;
-      color: #111;
-      padding: 12px 24px;
-      font-size: 16px;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-left: 10px;
-      border: none;
-    }
-    .voltar {
-      margin-top: 40px;
-    }
   </style>
-</head>
-<body oncontextmenu="return false">
-
-  <h1>Galeria Secreta de Foguetes WHOMARS</h1>
-
-  <div class="senha">
-    <p>Digite a senha para acessar:</p>
-    <input type="password" id="senha" placeholder="Senha">
-    <button class="btn" onclick="verificar()">Acessar</button>
-  </div>
-
-  <div class="container" id="galeria">
-    <!-- Imagens protegidas -->
-    <img src="https://i.ibb.co/fdjHw1qH/file-00000000e5b46230ba7555231f4efeb6-conversation-id-67fefe79.png" alt="Foguete">
-    <img src="https://i.ibb.co/xqyMSPyF/file-0000000012f061f7beaca2d2ec16cd79-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/3Y0vShy1/file-000000006f3461f791ef2dc9f397c853-conversation-id-1.png" alt="Foguete">
-    <img src="https://i.ibb.co/vvRxvy4P/file-000000006f3461f791ef2dc9f397c853-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/RkB1SgBr/file-00000000b4a861f6a93c4695bd3f093f-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/xSmcPC2n/file-0000000048f461f784b1e7f32e909cb0-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/Xxf4N9TC/file-00000000add461f881959e1494651fff-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/LDKZv3cm/file-0000000013cc61f7af1327b53ed91f66-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/K1NNJyX/file-000000004bd461f7a1e598f5fedad5f5-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/BVqQ73jL/file-0000000044a061f7bd4f24346e2d34ce-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/QjtxhN13/file-00000000dc8861f7910bf82bfd2c8055-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/SXm98F9H/file-000000003bbc61f7b54e5fa64fd10438-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/4n1xCvGc/file-00000000578c61f7b44174588b041b33-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/603F3g4w/file-000000002cd861f8b51addb8574a3fc7.png" alt="Foguete">
-    <img src="https://i.ibb.co/7N8ZVQRd/file-00000000bfe461f8bf1406265480e8e6.png" alt="Foguete">
-    <img src="https://i.ibb.co/3yzvhWkX/file-00000000d4a861f89fc2abab45989264.png" alt="Foguete">
-    <img src="https://i.ibb.co/Vp9T5BVK/file-00000000afac6230ab9418d79de557cd-conversation-id-67fefe79.png" alt="Foguete">
-    <img src="https://i.ibb.co/RpmYFWNR/file-00000000f90061f6841916e2ec2c8796-conversation-id.png" alt="Foguete">
-    <img src="https://i.ibb.co/sxQLvvh/file-00000000864862308575b429ec9fc37f.png" alt="Foguete">
-
-    <div class="voltar">
-      <a href="index.html"><button class="btn">Voltar para o Site Principal</button></a>
-    </div>
-  </div>
-
   <script>
-    function verificar() {
-      const senha = document.getElementById("senha").value;
-      if (senha === "whomars") {
-        document.getElementById("galeria").style.display = "flex";
-      } else {
-        alert("Senha incorreta!");
-      }
-    }
+    document.addEventListener('contextmenu', event => event.preventDefault());
   </script>
-
+</head>
+<body>
+  <h1>Galeria de Foguetes WHOMARS</h1>
+  <div class="container">
+    <img src="https://i.ibb.co/d4v40Qw2/file-000000006d4061f6932296188d8c804a-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/5w7xsWZ/Screenshot-2025-04-18-06-20-06-752-com-android-chrome.jpg" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/fdjHw1qH/file-00000000e5b46230ba7555231f4efeb6-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/xqyMSPyF/file-0000000012f061f7beaca2d2ec16cd79-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/3Y0vShy1/file-000000006f3461f791ef2dc9f397c853-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/RkB1SgBr/file-00000000b4a861f6a93c4695bd3f093f-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/xSmcPC2n/file-0000000048f461f784b1e7f32e909cb0-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/Xxf4N9TC/file-00000000add461f881959e1494651fff-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/LDKZv3cm/file-0000000013cc61f7af1327b53ed91f66-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/K1NNJyX/file-000000004bd461f7a1e598f5fedad5f5-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/BVqQ73jL/file-0000000044a061f7bd4f24346e2d34ce-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/QjtxhN13/file-00000000dc8861f7910bf82bfd2c8055-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/SXm98F9H/file-000000003bbc61f7b54e5fa64fd10438-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/4n1xCvGc/file-00000000578c61f7b44174588b041b33-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/603F3g4w/file-000000002cd861f8b51addb8574a3fc7-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/7N8ZVQRd/file-00000000bfe461f8bf1406265480e8e6-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/3yzvhWkX/file-00000000d4a861f89fc2abab45989264-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/sxQLvvh/file-00000000864862308575b429ec9fc37f-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/RpmYFWNR/file-00000000f90061f6841916e2ec2c8796-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/Vp9T5BVK/file-00000000afac6230ab9418d79de557cd-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/tMHZbHGS/file-00000000f6906230b78176cfbeff11b7-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/Ndh4WwBv/file-00000000f30c61f8b8e516f4ca6190c2-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/KxbbBYvp/file-00000000ab2c61f882aa4c8245c64129-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/q364QLNy/file-0000000062a46230a3eae893a4aad455-conversation-id.png" alt="WHOMARS"/>
+    <img src="https://i.ibb.co/YByH3VG6/file-0000000086b462308e4e0334dbf703b3-conversation-id.png" alt="WHOMARS"/>
+  </div>
 </body>
 </html>
