--- a/galeria.html
+++ b/galeria.html
@@ -10,77 +10,171 @@
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
+      margin: 0;
       padding: 20px;
-      user-select: none;
     }
     h1 {
       color: #00e6b8;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
+      animation: vibrar 0.4s infinite;
     }
-    .grid {
+    @keyframes vibrar {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-2px); }
+      75% { transform: translateX(2px); }
+    }
+    .filtros {
+      margin: 20px 0;
+    }
+    .filtros button {
+      background: #00b894;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 6px;
+      margin: 5px;
+      cursor: pointer;
+    }
+    .filtros button:hover {
+      background: #00e6b8;
+    }
+    .galeria-grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 15px;
+      gap: 20px;
     }
-    .galeria {
+    .item {
       width: 200px;
-      height: auto;
+      background: #1a1a1a;
       border-radius: 10px;
       box-shadow: 0 0 10px #00e6b8;
-      pointer-events: none;
-      -webkit-user-drag: none;
-      user-select: none;
+      overflow: hidden;
+      transition: transform 0.3s;
     }
-    .voltar-btn {
+    .item:hover {
+      transform: scale(1.03);
+    }
+    .item img {
+      width: 100%;
+      border-bottom: 1px solid #00e6b8;
+      cursor: pointer;
+    }
+    .info {
+      padding: 10px;
+      font-size: 14px;
+    }
+    .info h3 {
+      margin: 5px 0;
+      color: #00e6b8;
+    }
+    .info p {
+      margin: 2px 0;
+    }
+    .btn-voltar {
+      margin-top: 40px;
       background-color: #00b894;
       color: white;
       padding: 12px 25px;
-      font-size: 16px;
-      border-radius: 8px;
       border: none;
+      border-radius: 8px;
       cursor: pointer;
-      margin-top: 40px;
-      box-shadow: 0 0 8px #00e6b8;
     }
-    .voltar-btn:hover {
+    .btn-voltar:hover {
       background-color: #00e6b8;
     }
+    /* Lightbox */
+    #lightbox {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+    #lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      border: 4px solid #00e6b8;
+      border-radius: 12px;
+    }
   </style>
-  <script>
-    document.addEventListener('contextmenu', event => event.preventDefault());
-  </script>
 </head>
 <body>
-  <h1>Galeria Secreta de Foguetes WHOMARS</h1>
-  <div class="grid">
-    <img src="https://i.ibb.co/d4v40Qw2/file-000000006d4061f6932296188d8c804a-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/5w7xsWZ/Screenshot-2025-04-18-06-20-06-752-com-android-chrome.jpg" class="galeria">
-    <img src="https://i.ibb.co/fdjHw1qH/file-00000000e5b46230ba7555231f4efeb6-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/xqyMSPyF/file-0000000012f061f7beaca2d2ec16cd79-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/3Y0vShy1/file-000000006f3461f791ef2dc9f397c853-conversation-id-1.png" class="galeria">
-    <img src="https://i.ibb.co/vvRxvy4P/file-000000006f3461f791ef2dc9f397c853-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/RkB1SgBr/file-00000000b4a861f6a93c4695bd3f093f-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/xSmcPC2n/file-0000000048f461f784b1e7f32e909cb0-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/Xxf4N9TC/file-00000000add461f881959e1494651fff-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/LDKZv3cm/file-0000000013cc61f7af1327b53ed91f66-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/K1NNJyX/file-000000004bd461f7a1e598f5fedad5f5-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/BVqQ73jL/file-0000000044a061f7bd4f24346e2d34ce-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/QjtxhN13/file-00000000dc8861f7910bf82bfd2c8055-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/SXm98F9H/file-000000003bbc61f7b54e5fa64fd10438-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/4n1xCvGc/file-00000000578c61f7b44174588b041b33-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/603F3g4w/file-000000002cd861f8b51addb8574a3fc7.png" class="galeria">
-    <img src="https://i.ibb.co/7N8ZVQRd/file-00000000bfe461f8bf1406265480e8e6.png" class="galeria">
-    <img src="https://i.ibb.co/3yzvhWkX/file-00000000d4a861f89fc2abab45989264.png" class="galeria">
-    <img src="https://i.ibb.co/Vp9T5BVK/file-00000000afac6230ab9418d79de557cd-conversation-id-67fefe79.png" class="galeria">
-    <img src="https://i.ibb.co/RpmYFWNR/file-00000000f90061f6841916e2ec2c8796-conversation-id.png" class="galeria">
-    <img src="https://i.ibb.co/sxQLvvh/file-00000000864862308575b429ec9fc37f.png" class="galeria">
+
+  <h1>Galeria Interplanetária WHOMARS</h1>
+
+  <div class="filtros">
+    <button onclick="filtrar('todos')">Todos</button>
+    <button onclick="filtrar('brasil')">Brasil</button>
+    <button onclick="filtrar('russia')">Rússia</button>
+    <button onclick="filtrar('japao')">Japão</button>
+  </div>
+
+  <div class="galeria-grid">
+    <div class="item" data-cat="brasil">
+      <img src="https://i.ibb.co/d4v40Qw2/file-000000006d4061f6932296188d8c804a-conversation-id.png" onclick="abrirLightbox(this)">
+      <div class="info">
+        <h3>Foguete Brasil</h3>
+        <p>Artista: Paulo</p>
+        <p>Foguete tropical com coxinha e samba.</p>
+      </div>
+    </div>
+
+    <div class="item" data-cat="russia">
+      <img src="https://i.ibb.co/5w7xsWZ/Screenshot-2025-04-18-06-20-06-752-com-android-chrome.jpg" onclick="abrirLightbox(this)">
+      <div class="info">
+        <h3>Foguete Rússia</h3>
+        <p>Artista: Ivan</p>
+        <p>Tecnologia soviética com estilo retrô.</p>
+      </div>
+    </div>
+
+    <div class="item" data-cat="japao">
+      <img src="https://i.ibb.co/fdjHw1qH/file-00000000e5b46230ba7555231f4efeb6-conversation-id.png" onclick="abrirLightbox(this)">
+      <div class="info">
+        <h3>Foguete Japão</h3>
+        <p>Artista: Sakura</p>
+        <p>Robô samurai pilotando o foguete.</p>
+      </div>
+    </div>
+  </div>
+
+  <div id="lightbox" onclick="fecharLightbox()">
+    <img src="" alt="zoom">
   </div>
 
   <div>
     <a href="index.html">
-      <button class="voltar-btn">Voltar à Página Principal</button>
+      <button class="btn-voltar">Voltar à Página Principal</button>
     </a>
   </div>
+
+  <script>
+    function filtrar(cat) {
+      const itens = document.querySelectorAll('.item');
+      itens.forEach(item => {
+        if (cat === 'todos' || item.dataset.cat === cat) {
+          item.style.display = 'block';
+        } else {
+          item.style.display = 'none';
+        }
+      });
+    }
+
+    function abrirLightbox(img) {
+      const lightbox = document.getElementById('lightbox');
+      const lightImg = lightbox.querySelector('img');
+      lightImg.src = img.src;
+      lightbox.style.display = 'flex';
+    }
+
+    function fecharLightbox() {
+      document.getElementById('lightbox').style.display = 'none';
+    }
+  </script>
+
 </body>
 </html>
