--- a/galeria.html
+++ b/galeria.html
@@ -1,4 +1,7 @@
- <!DOCTYPE html>
+<a href="index.html">
+  <button class="botao">Voltar à Missão WHOMARS</button>
+</a>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
