--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
- <!DOCTYPE html>
+<a href="whomars.html">
+  <button class="botao">Ver Galeria</button>
+</a>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
