--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
- <!DOCTYPE html>
-<html lang="pt-BR">
+ <!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <title>WHOMARS - Página Principal</title>
@@ -59,33 +58,22 @@
     }
   </style>
 </head>
-<body>
-
-  <h1>Bem-vindo à missão WHOMARS</h1>
-  <p>Explore o espaço da criatividade memeira e compartilhe sua arte.</p>
-
-  <a href="galeria.html">
+<body>  <h1>Bem-vindo à missão WHOMARS</h1>
+  <p>Explore o espaço da criatividade memeira e compartilhe sua arte.</p>  <a href="galeria.html">
     <button class="botao">Ver Galeria</button>
-  </a>
-
-  <a href="#formulario">
+  </a>  <a href="#formulario">
     <button class="botao">Quero Expor Minha Arte</button>
-  </a>
-
-  <form id="formulario" action="https://formsubmit.co/paulojgoncalves2013@gmail.com" method="POST" enctype="multipart/form-data">
+  </a>  <form id="formulario" action="https://formsubmit.co/paulojgoncalves2013@gmail.com" method="POST" enctype="multipart/form-data">
     <h2 style="color:#00e6b8;">Exponha Sua Arte</h2>
     <p>Taxa única: <strong>R$ 20,00</strong></p>
-    <p>Chave Pix: <strong>(11) 98376-6776</strong></p>
+    <p>Chave Pix: <strong>(11) 98376-6776</strong></p><input type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
+<input type="text" name="titulo" placeholder="Título da obra" required>
+<textarea name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
+<input type="file" name="imagem" accept="image/*" required>
+<input type="text" name="comprovante" placeholder="ID ou link do comprovante Pix" required>
 
-    <input type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
-    <input type="text" name="titulo" placeholder="Título da obra" required>
-    <textarea name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
-    <input type="file" name="imagem" accept="image/*" required>
-    <input type="text" name="comprovante" placeholder="ID ou link do comprovante Pix" required>
+<button type="submit">Enviar Arte</button>
+<input type="hidden" name="_next" value="https://gpfk.github.io/obrigado.html">
 
-    <button type="submit">Enviar Arte</button>
-    <input type="hidden" name="_next" value="https://gpfk.github.io/obrigado.html">
-  </form>
-
-</body>
+  </form></body>
 </html>
