--- a/galeria.html
+++ b/galeria.html
@@ -15,6 +15,7 @@
     h1 {
       text-align: center;
       margin-bottom: 10px;
+      color: #00ffc8;
     }
     #filtro {
       display: block;
@@ -59,7 +60,7 @@
   <div class="galeria" id="galeria"></div>
 
   <script>
-    const sheetId = "1JPuFf8dSiQJYzGCSljcce8QTcA880dhBLqMetyAjqN0";
+    const sheetId = "12XdE5CPYxIEZs9D6LxH40d-skBjMSvYh";
     const url = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`;
 
     fetch(url)
